# alpha5

./: document_ai_ocr.py  pyproject.toml  requirements.txt
alpha5/: document_ai_ocr.py  nup_pdf.py
