[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alpha5"
version = "0.0.1"
authors = [{ name = "pointable", email = "package-maintainers@pointable.ai" }]
description = "Tooling for GCP Operations"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
    "google-cloud-documentai~=2.27",
    "google-cloud-storage~=2.16",
    "google-cloud-documentai-toolbox==0.13.3a0",
    "google-cloud-storage-transfer~=1.11",
    "pypdf~=4.2",
    "PyMuPDF~=1.24.2",
    "cloudpathlib[gs]~=0.18",
]

[project.optional-dependencies]
dev = [
  "pre-commit~=3.3",
  "pytest-cov~=4.1",
  "pytest~=7.3",
]

[project.urls]
"Homepage" = "https://github.com/pointable-ai/alpha5"
"Bug Tracker" = "https://github.com/pointable-ai/alpha5/issues"
